--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,32 @@
+/* COMMON */
 body{
   color: #333;
   font-size: 16px;
+  font-weight: 400;
+  line-height: 1.4;
   font-family: 'Nanum Gothic', sans-serif;;
+}
+img{
+  display: block;
+}
+
+/* HEARDER */
+header{
+  background-color: royalblue;
+}
+header .inner{
+  width: 1100px;
+  height: 120px;
+  margin: 0 auto;
+  background-color: orange;
+  position: relative;
+}
+header .logo{
+  height: 75px;
+  /* 부모요소 position 필요함 */
+  position: absolute; 
+  top: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
 }
