--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@ body{
 img{
   display: block;
 }
+a{
+  text-decoration: none;
+}
 
 /* HEARDER */
 header{
@@ -29,4 +32,49 @@ header .logo{
   bottom: 0;
   left: 0;
   margin: auto;
+  display: none;
+}
+header .sub-menu{
+    
+}
+header .sub-menu ul.menu{
+  font-family: Arial, sans-serif;
+  display: flex; /* 수평 */
+}
+header .sub-menu ul.menu li{
+  position: relative;
+
+}
+header .sub-menu ul.menu li::before{ 
+  /* 가상요소 선택자, 앞쪽에 넣기 가능, 인라인요소*/
+  content: "";
+  width: 1px;
+  height: 12px;
+  background-color: #e5e5e5;
+  position: absolute;
+  /* position 명명시, 자동으로 block요소 됨 */
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+header .sub-menu ul.menu li:first-child::before{ 
+ display: none;
+}
+header .sub-menu ul.menu li a{
+    font-size: 12px;
+    padding: 11px 16px; /* 선택시 폭 주기 */
+    display: block;
+    color: #656565;
+}
+header .sub-menu ul.menu li a:hover{
+  color: #000;
+}
+header .sub-menu .search{
+    
+}
+header .sub-menu .search input{
+    
+}
+header .sub-menu .search .material-icons{
+    
 }
