--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,61 @@ a{
  margin: 0 auto;
  position: relative;
 }
+.btn{
+  width: 130px;
+  padding: 10px;
+  border: 2px solid #333;
+  border-radius: 4px;
+  color : #333;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  /* 패딩이 들어간 만큼 박스가 커지지 않도록 하기 */
+  box-sizing: border-box;
+  display: block;
+  transition: .4s;
+}
+.btn:hover{
+  background-color: #333;
+  color: white;
+}
+.btn.btn--reverse{
+  /* 버튼 상태가 reverse 인 경우 */
+  /* 기본 선택자보다 우선순위 높아서 덮어씌어짐 */
+  background-color: #333;
+  color: white;
+}
+.btn.btn--reverse:hover{
+  background-color: transparent;
+  color: #333;
+}
+.btn.btn--brown{
+  background-color: #592B18;
+  border-color: #592B18;
+  color: white;
+}
+.btn.btn--brown:hover{
+  background-color: #FFF;
+  color: #592B18;
+}
+.btn.btn--gold{
+  background-color: #D9AA8A;
+  border-color: #D9AA8A;
+  color: white;
+}
+.btn.btn--gold:hover{
+  background-color: #FFF;
+  color: #D9AA8A;
+}
+.btn.btn--white{
+  background-color: #FFF;
+  border-color: #FFF;
+}
+.btn.btn--white:hover{
+  background-color: #333;
+  color: #FFF;
+}
 
 /* HEARDER */
 header{
@@ -27,6 +82,7 @@ header{
   border-bottom: 1px solid  #c8c8c8;
   position: fixed;
   top: 0;
+  z-index: 9;
 }
 header > .inner{
   /* 자식 선택자 > 사용 header 자식인 inner만 해당 */
@@ -193,4 +249,53 @@ header .badges .badge{
   margin-bottom: 12px;
   box-shadow: 4px 4px 10px rgba(0,0,0,.15);
   cursor: pointer;
+}
+
+/* VISUAL */
+.visual {
+  /* 헤더의 높이 */
+  margin-top: 120px;
+  background-image: url("../images/visual_bg.jpg");
+  background-position: center;
+}
+.visual .inner {
+  height: 646px;
+}
+.visual .title {
+  /*구조적인 부모요소 inner*/
+  position: absolute;
+  top: 88px;
+  left: -10px;
+}
+.visual .title .btn{
+  /* 구조상의 부모 요소 title */
+  position: absolute;
+  top: 259px;
+  left: 173px;
+}
+.visual .cup1.image {
+  /* cup1이라는 클래스와 image클래스 동시에 가지고 있음 */
+  position: absolute;
+  bottom: 0;
+  right: -47px;
+}
+.visual .cup1.text {
+  position: absolute;
+  top: 38px;
+  right: 171px;
+}
+.visual .cup2.image {
+  position: absolute;
+  bottom: 0;
+  right: 162px;
+}
+.visual .cup2.text {
+  position: absolute;
+  top: 321px;
+  right: 416px;
+}
+.visual .spoon {
+  position: absolute;
+  bottom: 0;
+  left: 275px;
 }
