--- a/css/main.css
+++ b/css/main.css
@@ -403,9 +403,6 @@ header .badges .badge{
   /* width: 2477px; */
   width: calc(819px * 3 + 20px);
   height: 553px;
-  background-color: orange;
-  text-align: center;
-  font-size: 200px;
   /* 가운데 정렬_화면 축소/확대 시에도 */
   position: absolute;
   top: 40px;
@@ -413,5 +410,71 @@ header .badges .badge{
   margin-left: calc((819px * 3 + 20px) / -2); /* 절반만큼 다시 땡겨 옴 */
 }
 .notice .promotion .swiper-slide {
-
+  opacity: .5;
+  transition: opacity 1s;
+  position: relative;
+}
+.notice .promotion .swiper-slide-active {
+  /* 가운데에서 정렬 되는 메인 프로모션 창은 클래스명 따로 지정됨 자동 */
+  opacity: 1;
+}
+.notice .promotion .swiper-slide .btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* 가로 너비가 원래 필요하나 위에 common에 btn 가로 명시해 둠 */
+  margin: auto; 
+}
+.notice .promotion .swiper-pagination {
+  /* span 태그 inline-block 요소이기에 글씨 text-align center 적용됨 */
+  bottom: 40px;
+  left: 0;
+  right: 0;
+}
+.notice .promotion .swiper-pagination .swiper-pagination-bullet {
+  background-color: transparent;
+  background-image: url('../images/promotion_slide_pager.png');
+  width: 12px;
+  height: 12px;
+  margin-right: 6px;
+  /* 파란색 테두리 없애기 */
+  outline: none;
+}
+.notice .promotion .swiper-pagination .swiper-pagination-bullet:last-child {
+  margin-right: 0;
+}
+.notice .promotion .swiper-pagination .swiper-pagination-bullet-active {
+  background-image: url('../images/promotion_slide_pager_on.png');
+}
+.notice .promotion .swiper-prev,
+.notice .promotion .swiper-next{ 
+  /* 다중 선택자 */
+  width: 42px;
+  height: 42px;
+  border: 2px solid #333;
+  border-radius: 50%;
+  position: absolute;
+  top: 300px;
+  z-index: 1;
+  cursor: pointer;
+  outline: none;
+  /* 화살표 가운데 정렬 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: .4s;
+}
+.notice .promotion .swiper-prev {
+  left: 50%;
+  margin-left: -480px;
+}
+.notice .promotion .swiper-next {
+  right: 50%;
+  margin-right: -480px;
+}
+.notice .promotion .swiper-prev:hover,
+.notice .promotion .swiper-next:hover {
+  background-color: #333;
+  color: #fff;
 }
