--- a/css/main.css
+++ b/css/main.css
@@ -485,3 +485,95 @@ header .badges .badge{
   background-color: #333;
   color: #fff;
 }
+
+/* REWARDS */
+.rewards {
+  position: relative;
+}
+.rewards .bg-left {
+  width: 50%;
+  height: 100%;
+  background-color: #272727;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.rewards .bg-right {
+  width: 50%;
+  height: 100%;
+  background-color: #d5c798;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.rewards .inner {
+  /* inner 공통 position relative 위에 common 선언해둠 */
+  background-image: url("../images/rewards.jpg");
+  height: 241px;
+}
+.rewards .btn-group {
+  position: absolute;
+  bottom: 24px;
+  right: 0;
+  width: 250px;
+  display: flex;
+  /* 가로 너비 250보다 넘칠 경우, 줄바꿈 허용 */
+  flex-wrap: wrap;
+}
+.rewards .btn-group .btn.sign-up {
+  margin-right: 10px;
+}
+.rewards .btn-group .btn.sign-in {
+  width: 110px;
+}
+.rewards .btn-group .btn.gift {
+  margin-top: 10px;
+  /* 최대한의 너비를 쓸 수 있도록 늘어나라 */
+  flex-grow: 1;
+}
+
+/* YOUTUBE VIDEO */
+.youtube {
+  position: relative;
+  height: 700px;
+  background-color: #333;
+  /* 유튜브 영상 일부 위아래 넘치는 부분 잘라내기 */
+  overflow: hidden;
+}
+.youtube .youtube__area {
+  /* FHD 1920 X 1080 */
+  width: 1920px;
+  background-color: orange;
+  position: absolute;
+  /* 가로 중앙 위치 */
+  left: 50%;
+  margin-left: calc(1920px / -2);
+  /* 높이 중앙 위치 */
+  top: 50%;
+  margin-top: calc(1920px * 9 /16 / -2);
+}
+.youtube .youtube__area::before {
+  /* 가상의 요소 만들기 */
+  content: "";
+  display: block;
+  width: 100%;
+  height: 0;
+  /* 16:9 비율로 화면에 띄우기 */
+  padding-top: 56.25% 
+}
+.youtube .youtube__cover {
+  background-image: url("../images/video_cover_pattern.png");
+  background-color: rgba(0,0,0,.3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#player {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
