--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body{
   font-weight: 400;
   line-height: 1.4;
   font-family: 'Nanum Gothic', sans-serif;;
-  height: 3000px;
+  /* height: 3000px; */
 }
 img{
   display: block;
@@ -57,21 +57,21 @@ a{
   color: #592B18;
 }
 .btn.btn--gold{
-  background-color: #D9AA8A;
+  background-color: #333;
   border-color: #D9AA8A;
-  color: white;
-}
-.btn.btn--gold:hover{
-  background-color: #FFF;
   color: #D9AA8A;
 }
+.btn.btn--gold:hover{
+  background-color: #D9AA8A;
+  color: #FFF;
+}
 .btn.btn--white{
-  background-color: #FFF;
   border-color: #FFF;
+  color: white;
 }
 .btn.btn--white:hover{
-  background-color: #333;
-  color: #FFF;
+  background-color: #FFF;
+  color: #333;
 }
 
 /* HEARDER */
@@ -590,8 +590,131 @@ header .badges .badge{
   top: 350px;
   left: 150px;
 }
-.youtube .floating3 {
+
+
+/* SEASON PRODUCT */
+.season-product  {
+  background-image: url("../images/season_product_bg.jpg");
+}
+.season-product .inner {
+  height: 400px;
+}
+.season-product .floating3 {
   position: absolute;
-  bottom: -200px;
+  top: -200px;
   right: 0;
+}
+.season-product .text-group {
+  position: absolute;
+  top: 110px;
+  right: 100px;
+}
+.season-product .text-group .title {
+  margin-bottom: 10px;
+}
+.season-product .text-group .description {
+  margin-bottom: 15px;
+}
+.season-product .text-group .more {
+  
+}
+
+/* RESERVE COFFEE */
+.reserve-coffee {
+  background-image: url("../images/reserve_bg.jpg");
+}
+.reserve-coffee .inner {
+  height: 400px;
+}
+.reserve-coffee .reserve-logo {
+  position: absolute;
+  top: 110px;
+  left: 0;
+}
+.reserve-coffee .text-group {
+  position: absolute;
+  top: 124px;
+  left: 208px;
+}
+.reserve-coffee .product {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+/* PICK YOUR FAVORITE */
+.pick-your-favorite {
+  background-image: url("../images/favorite_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  /* 스크롤할 경우, 배경에 고정해서 움직이지 않는다. */
+  background-attachment: fixed;
+  /* 배경 넓은 이미지 뷰포트에 맞춰 확장된다 */
+  background-size: cover;
+}
+.pick-your-favorite .inner {
+  padding: 110px 0;
+}
+.pick-your-favorite .text-group {
+  margin-left: 100px;
+  display: flex;
+  width: 362px;
+  /* 너비에 채우지 못한다면 줄바꿈하도록 설정 */
+  flex-wrap: wrap;
+  /* 우측 정렬 */
+  justify-content: flex-end;
+}
+.pick-your-favorite .text-group .title {
+  margin-bottom: 40px;
+}
+.pick-your-favorite .text-group .description {
+  margin-bottom: 40px;
+}
+
+/* RESERVE STORE */
+.reserve-store {
+  background-image: url("../images/reserve_store_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.reserve-store .inner {
+  height: 600px;
+  /* 원근법 */
+  perspective: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.reserve-store .medal {
+  width: 334px;
+  height: 334px;
+}
+.reserve-store .medal .front,
+.reserve-store .medal .back {
+  width: 334px;
+  height: 334px;
+  position: absolute;
+  backface-visibility: hidden;
+  transition: 1s;
+}
+.reserve-store .medal .front {
+  transform: rotateY(0deg);
+}
+.reserve-store .medal:hover .front {
+  transform: rotateY(180deg);
+}
+.reserve-store .medal .back {
+  transform: rotateY(-180deg);
+}
+.reserve-store .medal:hover .back {
+  transform: rotateY(0deg);
+}
+.reserve-store .medal .back .btn {
+  position: absolute;
+  top: 240px;
+  left: 0px;
+  right: 0px;
+  margin: auto;
 }
